[package]
name = "kzg-blob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config-file = { version = "0.2.3", features = ["json"] }
group = "0.13.0"
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "axiom-dev-0406" }
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = "1.0.160"
serde_json = "1.0.96"

[[bin]]
name = "trusted_setup"
path = "src/trusted_setup.rs"

[[bin]]
name = "blob_commit"
path = "src/blob_commit.rs"
 