[package]
name = "kzgblob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "axiom-dev-0406" }
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = "1.0.160"
serde_json = "1.0.96"
